--- a/index.html
+++ b/index.html
@@ -12,14 +12,15 @@
     />
     <script src="https://cdn.tailwindcss.com"></script>
     <!-- Font family -->
+        <style>
+          @import url('https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,400;0,800;1,700&family=Work+Sans:wght@500&display=swap');
+        </style>
     <style>
-  @import url('https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,400;0,800;1,700&display=swap');
-  </style>
-  <style>
-    body{
-      font-family: 'Open Sans', sans-serif;
+      body{
+      
+       font-family: 'Work Sans', sans-serif;
         }
-</style>
+    </style>
   </head>
 
   <body>
